# cuboid

./: .gitignore  Cargo.toml  README.md
examples/basic_example/: controller.rs  main.rs
examples/basic_example/resources/shaders/: test.frag  test.vert
examples/basic_texture/: controller.rs  main.rs
examples/basic_texture/resources/shaders/: test.frag  test.vert
examples/gl_basic_texture/: main.rs
examples/gl_hello_world/: main.rs
examples/gl_texture_example/: main.rs
examples/gl_texture_example/resources/shaders/: test.frag
examples/hello_world/: controller.rs  main.rs
examples/hello_world/resources/shaders/: test.frag  test.vert
examples/not_working/gl_basic_example/: main.rs
examples/ogl_basic_texture/resources/shaders/: line.frag
examples/ogl_hello_world/: main.rs
examples/ogl_texture_example/: main.rs
examples/texture_example/: main.rs
examples/texture_example/resources/shaders/: test.frag  test.vert
src/: lib.rs  main.rs  mod.rs
src/components/: camera.rs  material.rs  mod.rs  renderer.rs  renderer2d.rs  renderer3d.rs  shape.rs  texture.rs
src/core/: mod.rs  shader.rs  traits.rs  transform.rs  window.rs
src/core/buffers/: ebo.rs  mod.rs  ubo.rs  vao.rs  vbo.rs
src/core/materials/: shader.rs
src/core/utils/: gl.rs  init.rs  mod.rs  types.rs  wrappers.rs
src/example/: controller.rs
src/io/: cam_controller.rs  mod.rs
src/opengl/: mod.rs
src/opengl/components/: camera.rs  material.rs  renderer2d.rs  renderer3d.rs  shape.rs  texture.rs
src/opengl/core/: shader.rs  traits.rs  transform.rs  window.rs
src/opengl/core/buffers/: ebo.rs  mod.rs  ubo.rs  vao.rs  vbo.rs
src/opengl/io/: cam_controller.rs
src/resources/shaders/shader1/: test.vert
src/utils/: conversions.rs  images.rs  init.rs  mod.rs  opengl.rs  str.rs  types.rs
src/utils/math/: linalg.rs  mod.rs  trig.rs  vector.rs
test/resources/shaders/shader1/: test.frag  test.vert
